--- a/public/testingStuff.html
+++ b/public/testingStuff.html
@@ -14,26 +14,20 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-
-	<div class="container">
-
-		<div class="userLoginSignUp w-50 mx-auto pt-5">
-	        <form class="pb-3">
-	          <div class="form-group">
-	          	<label for="username">Username</label>
-	            <input type="text" name="name_input" class="form-control" id="username" placeholder="username *">
-	          </div>
-	          <div class="form-group">
-	          	<label for="password">Password</label>
-	            <input type="password" name="password_input" class="form-control" id="password" placeholder="password *">
-	            <small id="emailHelp" class="form-text text-muted">Username and password are case sensitive.</small>
-	          </div>
-	        </form>
-	        <button class="btn btn-primary btn-md" id="loginButton">LOGIN</button>
-	        <button class="btn btn-secondary btn-md" id="signupButton">SIGN-UP</button>
-	    </div>
-
+	<div>
+		<h1>Hello</h1>
+		<p>My name is Juthika</p>
+		
 	</div>
+
+	<form>
+		<label>Info</label>
+		<textarea rows="4" cols="50">
+			
+		</textarea>
+	</form>
+	<button id="edit">edit</button>
+	<button id="save">save</button>
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- jQuery CDN -->
@@ -49,6 +43,22 @@
     <!-- JS code -->
 	<script type="text/javascript">
 
+		$("#edit").on("click", function(){
+			var text = $("p").text();
+			$("textarea").val(text);
+			// $("p").attr("contenteditable", "true");
+			// $("h1").attr("contenteditable", "true");
+			// $("img").attr("contenteditable", "true");
+		})
+
+		$("#save").on("click", function(){
+			var editedText = $("textarea").val();
+
+			$("p").text(editedText);
+			// $("p").attr("contenteditable", "false");
+			// $("h1").attr("contenteditable", "false");
+			// $("img").attr("contenteditable", "false");
+		})
 	</script>
 </body>
 </html>
