basic signup created

--- a/public/index.html
+++ b/public/index.html
@@ -1,54 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
     <!-- Required meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<title>Notes App</title>
-
-	<!-- Bootstrap CSS CDN -->
+    <title>Notes App</title>
+    <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <!-- CSS files -->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-</head>
-<body>
+  </head>
 
-	<div class="container">
+  <body>
+    <div class="container">
 
-		<div class="userLoginSignUp w-50 mx-auto pt-5">
-	        <form class="pb-3">
-	          <div class="form-group">
-	          	<label for="username">Username</label>
-	            <input type="text" name="name_input" class="form-control" id="username" placeholder="username *">
-	          </div>
-	          <div class="form-group">
-	          	<label for="password">Password</label>
-	            <input type="password" name="password_input" class="form-control" id="password" placeholder="password *">
-	            <small id="emailHelp" class="form-text text-muted">Username and password are case sensitive.</small>
-	          </div>
-	        </form>
-	        <button class="btn btn-primary btn-md" id="loginButton">LOGIN</button>
-	        <button class="btn btn-secondary btn-md" id="signupButton">SIGN-UP</button>
-	    </div>
+      <div class="userLoginSignUp w-50 mx-auto pt-5">
 
-	</div>
+        <form class="pb-3">
 
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" name="name_input" class="form-control" id="username" placeholder="username *">
+          </div>
+
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password_input" class="form-control" id="password" placeholder="password *">
+            <small id="emailHelp" class="form-text text-muted">Username and password are case sensitive.</small>
+          </div>
+
+        </form>
+
+        <button class="btn btn-primary btn-md" id="loginButton">LOGIN</button>
+        <button class="btn btn-secondary btn-md" id="signupButton">SIGN-UP</button>
+
+      </div>
+
+    </div>
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Popper.js (for Bootstrap)-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
     <!-- Javascript Files-->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
     <!-- JS code -->
-	<script type="text/javascript">
-
-	</script>
-</body>
+    <script type="text/javascript"></script>
+  </body>
 </html>
